.gradle/gradle.log
This mapping 'snapshot_20161220' was designed for MC 1.11! Use at your own peril.This mapping 'snapshot_20161220' was designed for MC 1.11! Use at your own peril.

#################################################
         ForgeGradle 2.2-SNAPSHOT-7f5a769        
  https://github.com/MinecraftForge/ForgeGradle  
#################################################
               Powered by MCP unknown               
             http://modcoderpack.com             
         by: Searge, ProfMobius, Fesh0r,         
         R4wk, ZeuX, IngisKahn, bspkrs           
#################################################
:deobfCompileDummyTask
:deobfProvidedDummyTask
:generateApiGrammarSource UP-TO-DATE
:sourceApiJava
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:generateGrammarSource UP-TO-DATE
:sourceMainJava
<<<<<<< Updated upstream
:compileJavaC:\Development\Uni\P4\EduCode\build\sources\main\java\com\educode\symboltable\SymbolTable.java:71: error: <identifier> expected
        DeclaredVariableCounter += value;
                                        ^
1 error
 FAILED

FAILURE: Build failed with an exception.
=======
:compileJava/home/zen/Git/EduCode-P4/build/sources/main/java/com/educode/helper/InterfaceConverter.java:6: warning: TypeVariableImpl is internal proprietary API and may be removed in a future release
import sun.reflect.generics.reflectiveObjects.TypeVariableImpl;
                                             ^
/home/zen/Git/EduCode-P4/build/sources/main/java/com/educode/visitors/codegeneration/JavaBytecodeGenerationVisitor.java:16: warning: XUnmapEvent is internal proprietary API and may be removed in a future release
import sun.awt.X11.XUnmapEvent;
                  ^
/home/zen/Git/EduCode-P4/build/sources/main/java/com/educode/helper/InterfaceConverter.java:56: warning: TypeVariableImpl is internal proprietary API and may be removed in a future release
            if (method.getGenericReturnType() instanceof TypeVariableImpl)
                                                         ^
/home/zen/Git/EduCode-P4/build/sources/main/java/com/educode/helper/InterfaceConverter.java:67: warning: TypeVariableImpl is internal proprietary API and may be removed in a future release
                if (parameter instanceof TypeVariableImpl)
                                         ^
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
4 warnings

:processResources UP-TO-DATE
:classes
:jar
:generateTestGrammarSource UP-TO-DATE
:sourceTestJava UP-TO-DATE
:compileTestJava UP-TO-DATE
:processTestResources UP-TO-DATE
:testClasses UP-TO-DATE
:test UP-TO-DATE
:extractMcpData SKIPPED
:extractMcpMappings SKIPPED
:getVersionJson
:extractUserdev UP-TO-DATE
:genSrgs SKIPPED
:reobfJar
:extractRangemapReplacedMain
/home/zen/Git/EduCode-P4/build/sources/main/java
:retromapReplacedMain
remapping source...
:sourceJar
:assemble
:check UP-TO-DATE
:build
>>>>>>> Stashed changes

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

<<<<<<< Updated upstream
* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 54.89 secs
=======
Total time: 1 mins 1.843 secs
>>>>>>> Stashed changes
